# TheShadowBells

./: CMakeLists.txt
assets/Tiled/Levelmaps/: Level1.json  Level1Final.json  Level1Min.json  Level1v3.json  Level2.json  Testmap.json  Testmap1.json
assets/Tiled/Tilesets/: Level1Complete.tsj  Level1v3.tsj  Level2.tsj  Level2fertig.tsj  tileset_1bit.tsj
assets/graphics/data/: Testmap1.json
src/: CMakeLists.txt  config.h.in  config_enemys.h.in
src/core/: Animations.cpp  Animations.h  CMakeLists.txt  Cam.cpp  Cam.h  CollisionManager.cpp  CollisionManager.h  DeltaTimeMachine.h  Object_Manager.cpp  Object_Manager.h  Quadtree.cpp  Quadtree.h  RepeatAnimation.cpp  RepeatAnimation.h  Stage.cpp  Stage.h
src/game/: AttackDirection.h  Collidable.h  CollisionResponse.cpp  CollisionResponse.h  Consumables.cpp  Consumables.h  EnemyBaseClass.cpp  EnemyBaseClass.h  EnemyBaseSpawner.cpp  EnemyBaseSpawner.h  EnemyExtendedBaseClass.cpp  EnemyExtendedBaseClass.h  EnemyProjectile.cpp  EnemyProjectile.h  EnemySpawner.cpp  EnemySpawner.h  Gunslinger.cpp  Gunslinger.h  MeleeEnemy.cpp  MeleeEnemy.h  MouseLook.cpp  MouseLook.h  PlayerBaseClass.cpp  PlayerBaseClass.h  PlayerClassOne.cpp  PlayerClassOne.h  PlayerProjectile.cpp  PlayerProjectile.h  RangedEnemy8D.cpp  RangedEnemy8D.h  RangedEnemyOmni.cpp  RangedEnemyOmni.h  Spawnpoints.cpp  Spawnpoints.h  UI.cpp  UI.h  Walls.cpp  Walls.h
src/game/enemys/: SpecialVampire.cpp  SpecialVampire.h  StandardVampire.cpp  StandardVampire.h  enemys_list.h
src/game/interactables/: BombPickup.cpp  BombPickup.h  BombWall.cpp  BombWall.h  Credits.cpp  Credits.h  Explosion.cpp  Explosion.h  Generator.cpp  Generator.h  GeneratorDoor.cpp  GeneratorDoor.h  Medipack.cpp  Medipack.h
src/scenes/: CMakeLists.txt  CarScene.cpp  CarScene.h  ControlsScene.cpp  ControlsScene.h  CreditsScene.cpp  CreditsScene.h  Cutscene.cpp  Cutscene.h  EndScene.cpp  EndScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  Level1Scene.cpp  Level1Scene.h  Level2Scene.cpp  Level2Scene.h  LevelTransition.cpp  LevelTransition.h  MenuButton.cpp  MenuButton.h  MenuScene.cpp  MenuScene.h  PauseScene.cpp  PauseScene.h  Scene.h  Screen.cpp  Screen.h  StoryScene.cpp  StoryScene.h
(+14 files in other folders)
